[project]
name = "totoro"
version = "1.0.0"
description = "Totoro, your dependable devops buddy"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = 'Kim Choy', email = 'kumjin.choy@gmail.com' }
]
dependencies = [
    "typer>=0.15.1",
    "pyyaml>=6.0.2",
    "fabric>=3.2.2",
    "invoke>=2.2.0",
    "click>=8.1.8",
    "boto3>=1.29.3",
]

[project.scripts]
totoro = "totoro.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
